syntax = "proto3";

package product;
option go_package = "./;pb";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse) {}
  rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse) {}
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse) {}
}

message CreateProductRequest {
  string name = 1 ;
  string description = 2;
  int32 price = 3;
  int32 warehouse_id = 4;
}

message CreateProductResponse {
  uint32 id = 1;
}

message UpdateProductRequest{
  uint32 id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  int32 warehouse_id = 5;
}

message UpdateProductResponse{
  bool ok = 1;
}

message DeleteProductRequest {
  uint32 id = 1;
}

message DeleteProductResponse {
  bool ok = 1;
}


